--- a/src/main/resources/view/StudentScoreListCard.fxml
+++ b/src/main/resources/view/StudentScoreListCard.fxml
@@ -25,8 +25,14 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="sid" text="\$sid" styleClass="cell_big_label" />
       </HBox>
+
+      <Label fx:id="studentName" text="\$studentName" styleClass="cell_small_label" />
+      <Label fx:id="gcName" text="\$gcName" styleClass="cell_small_label" />
+      <Label fx:id="score" text="\$score" styleClass="cell_small_label" />
+      <Label fx:id="comment" text="\$comment" styleClass="cell_small_label" />
+
     </VBox>
   </GridPane>
 </HBox>
