--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -142,6 +142,19 @@
      -fx-border-top-width: 1px;
 }
 
+.pane-with-border-custom {
+     -fx-background-color: derive(#1d1d1d, 25%);
+     -fx-border-color: derive(#1d1d1d, 10%);
+
+}
+
+.pane-header-text {
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+    -fx-font-family: "Segoe UI Light";
+
+}
+
 .status-bar {
     -fx-background-color: derive(#1d1d1d, 30%);
 }
