--- a/src/main/resources/view/GradedComponentListCard.fxml
+++ b/src/main/resources/view/GradedComponentListCard.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -25,11 +24,11 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="sid" text="\$sid" styleClass="cell_big_label" />
+        <Label fx:id="gcName" text="\$gcName" styleClass="cell_big_label" />
       </HBox>
 
-      <Label fx:id="score" text="\$score" styleClass="cell_small_label" />
-
+      <Label fx:id="maxMarks" text="\$maxMarks" styleClass="cell_small_label" />
+      <Label fx:id="weightage" text="\$weightage" styleClass="cell_small_label" />
     </VBox>
   </GridPane>
 </HBox>
