--- a/src/main/resources/view/GradedComponentListCard.fxml
+++ b/src/main/resources/view/GradedComponentListCard.fxml
@@ -13,7 +13,7 @@
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox fx:id="studentScoreBox" alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <VBox fx:id="gradedComponentBox" alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
         <Insets top="5" right="5" bottom="5" left="15" />
       </padding>
