--- a/src/main/resources/view/StudentListCard.fxml
+++ b/src/main/resources/view/StudentListCard.fxml
@@ -27,7 +27,7 @@
         </Label>
         <Label fx:id="sid" text="\$first" styleClass="cell_big_label" />
       </HBox>
-
+      <FlowPane fx:id="tags" />
       <Label fx:id="studentName" text="\$studentName" styleClass="cell_small_label" />
       <Label fx:id="studentEmail" text="\$studentEmail" styleClass="cell_small_label" />
       <Label fx:id="tutorialGroup" text="\$tutorialGroup" styleClass="cell_small_label" />
