--- a/src/main/resources/view/StudentScoreListCard.fxml
+++ b/src/main/resources/view/StudentScoreListCard.fxml
@@ -27,7 +27,7 @@
         </Label>
         <Label fx:id="sid" text="\$sid" styleClass="cell_big_label" />
       </HBox>
-
+      <FlowPane fx:id="tags" />
       <Label fx:id="score" text="\$score" styleClass="cell_small_label" />
 
     </VBox>
