--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -363,3 +363,17 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#studentGrade {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#studentGrade .label {
+    -fx-text-fill: white;
+    -fx-background-color: #4c7e4c;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 14;
+}
