--- a/src/main/resources/view/StudentListCard.fxml
+++ b/src/main/resources/view/StudentListCard.fxml
@@ -25,7 +25,13 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="sid" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="sid" text="\$first" styleClass="cell_big_label" >
+          <minWidth>
+            <!-- Ensures that the label text is never truncated -->
+            <Region fx:constant="USE_PREF_SIZE" />
+          </minWidth>
+        </Label>
+        <FlowPane fx:id="studentGrade" />
       </HBox>
       <FlowPane fx:id="tags" />
       <Label fx:id="studentName" text="\$studentName" styleClass="cell_small_label" />
