--- a/src/main/resources/view/GradedComponentListCard.fxml
+++ b/src/main/resources/view/GradedComponentListCard.fxml
@@ -24,11 +24,11 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="gcName" text="\$gcName" styleClass="cell_big_label" />
+        <Label fx:id="gcName" text="\$gcName" styleClass="cell_big_label" wrapText="true"/>
       </HBox>
 
-      <Label fx:id="maxMarks" text="\$maxMarks" styleClass="cell_small_label" />
-      <Label fx:id="weightage" text="\$weightage" styleClass="cell_small_label" />
+      <Label fx:id="maxMarks" text="\$maxMarks" styleClass="cell_small_label" wrapText="true"/>
+      <Label fx:id="weightage" text="\$weightage" styleClass="cell_small_label" wrapText="true"/>
     </VBox>
   </GridPane>
 </HBox>
