--- a/src/main/resources/view/StudentListCard.fxml
+++ b/src/main/resources/view/StudentListCard.fxml
@@ -25,7 +25,7 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="sid" text="\$first" styleClass="cell_big_label" >
+        <Label fx:id="sid" text="\$first" styleClass="cell_big_label" wrapText="true">
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
@@ -34,9 +34,9 @@
         <FlowPane fx:id="studentGrade" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="studentName" text="\$studentName" styleClass="cell_small_label" />
-      <Label fx:id="studentEmail" text="\$studentEmail" styleClass="cell_small_label" />
-      <Label fx:id="tutorialGroup" text="\$tutorialGroup" styleClass="cell_small_label" />
+      <Label fx:id="studentName" text="\$studentName" styleClass="cell_small_label" wrapText="true"/>
+      <Label fx:id="studentEmail" text="\$studentEmail" styleClass="cell_small_label" wrapText="true"/>
+      <Label fx:id="tutorialGroup" text="\$tutorialGroup" styleClass="cell_small_label" wrapText="true"/>
     </VBox>
   </GridPane>
 </HBox>
