--- a/src/main/resources/view/StudentScoreListCard.fxml
+++ b/src/main/resources/view/StudentScoreListCard.fxml
@@ -19,16 +19,16 @@
         <Insets top="5" right="5" bottom="5" left="15" />
       </padding>
       <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="id" styleClass="cell_big_label">
+        <Label fx:id="id" styleClass="cell_big_label" >
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="sid" text="\$sid" styleClass="cell_big_label" />
+        <Label fx:id="sid" text="\$sid" styleClass="cell_big_label" wrapText="true"/>
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="score" text="\$score" styleClass="cell_small_label" />
+      <Label fx:id="score" text="\$score" styleClass="cell_small_label" wrapText="true"/>
 
     </VBox>
   </GridPane>
